codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
Active agent: Default session (session)
Model: gpt-5.2-codex | Tools: inherit parent session
Switch agents with ":use-agent <id>" or restart with "--use-subagent <id>" (see
`codex agents list`).
Inspect transcripts + resume tokens with `codex agents resume-status`.


  Upload logs?

  The following files will be sent:
    • codex-logs.log

› 1. Yes  Share the current Codex session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
