codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"Active agent: Default session (session)                                         "
"Model: gpt-5.2-codex | Tools: inherit parent session                            "
"Switch agents with ":use-agent <id>" or restart with "--use-subagent <id>" (see "
"`codex agents list`).                                                           "
"Inspect transcripts + resume tokens with `codex agents resume-status`.          "
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  100% context left · ? for shortcuts                                           "
